# bazel-grpc

./: .gitignore  README.md  go.mod  main.go  results.json  results.md
.github/workflows/: verify_matrix.yml
proto/: BUILD.bazel  greeter.proto
templates/: MODULE.bazel.tmpl
