load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
)

cc_proto_library(
    name = "greeter_cc_proto",
    deps = [":greeter_proto"],
)

cc_grpc_library(
    name = "greeter_cc_grpc",
    srcs = [":greeter_proto"],
    deps = [":greeter_cc_proto"],
    grpc_only = True,
)

go_proto_library(
    name = "greeter_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc_v2",
        "@rules_go//proto:go_proto",
    ],
    importpath = "github.com/example/greeter",
    proto = ":greeter_proto",
)

go_library(
    name = "greeter",
    embed = [":greeter_go_proto"],
    importpath = "github.com/example/greeter",
)